--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main id="cont">
             <section>
                 <div>
-                    <video onloadeddata="this.play();" poster="static/imgs/VideoPoster.jpg" autoplay muted loop preload="auto" playsinline id="vid-bg">
+                    <video onloadeddata="this.play();" onloadedmetadata="this.muted = true" poster="static/imgs/VideoPoster.jpg" autoplay muted loop preload="auto" playsinline id="vid-bg">
                         <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
                     </video>
                 </div>
