--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <section>
                 <div>
                     <video onloadeddata="this.play();" onloadedmetadata="this.muted = true" poster="static/imgs/VideoPoster.jpg" autoplay muted loop preload="auto" playsinline id="vid-bg">
+                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm">
                         <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -39,7 +40,7 @@
                         <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
                     </div>
                     <div id="dl-btn-cont">
-                        <a id="dl-btn" href="https://store.steampowered.com/app/2225090/Cascadence/">Preview <span><img id="ic-caret" src = "static/imgs/caret.svg" /></span></a>
+                        <a id="dl-btn" href="https://store.steampowered.com/app/2225090/Cascadence/">Demo <span><img id="ic-caret" src = "static/imgs/caret.svg" /></span></a>
                     </div>
                 </div>
             </section>
