--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <main id="cont">
             <section>
                 <div>
-                    <video onloadeddata="this.play();" onloadedmetadata="this.muted = true" poster="static/imgs/VideoPoster.jpg" autoplay muted loop preload="auto" playsinline id="vid-bg">
-                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm">
+                    <video onloadeddata="this.play();" poster="static/imgs/VideoPoster.jpg" playsinline loop muted id="vid-bg">
                         <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
+                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm">
                     </video>
                 </div>
                 <div id="vid-overlay">
