testing firefox compat

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="static/stylesheet.css?v=2"" type=" text/css">
+        <script src="static/script.js"></script>
         <link rel="apple-touch-icon" sizes="180x180" href="static/imgs/icons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="static/imgs/icons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="static/imgs/icons/favicon-16x16.png">
@@ -30,9 +31,9 @@
         <main id="cont">
             <section>
                 <div>
-                    <video onloadeddata="this.play();" poster="static/imgs/VideoPoster.jpg" playsinline loop muted id="vid-bg">
+                    <video poster="static/imgs/VideoPoster.jpg" preload="auto" loop muted id="vid-bg">
                         <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
-                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm">
+                        <!-- <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm"> -->
                     </video>
                 </div>
                 <div id="vid-overlay">
