--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             <section>
                 <div>
                     <video poster="static/imgs/VideoPoster.jpg" preload="auto" loop muted id="vid-bg">
-                        <source src="static/CascadenceTrailerWebsite.mp4" type="video/mp4">
-                        <!-- <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4"> -->
-                        <!-- <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.webm" type="video/webm"> -->
+                        <!-- <source src="static/CascadenceTrailerWebsite.mp4" type="video/mp4"> -->
+                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div id="vid-overlay">
