--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="static/stylesheet.css?v=2"" type=" text/css">
+        <link rel="stylesheet" href="static/stylesheet.css?v=3"" type=" text/css">
         <script src="static/script.js"></script>
         <link rel="apple-touch-icon" sizes="180x180" href="static/imgs/icons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="static/imgs/icons/favicon-32x32.png">
@@ -40,7 +40,7 @@
                         <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
                     </div>
                     <div id="dl-btn-cont">
-                        <a id="dl-btn" href="https://store.steampowered.com/app/2225090/Cascadence/">Demo <span><img id="ic-caret" src = "static/imgs/caret.svg" /></span></a>
+                        <a id="dl-btn" href="https://store.steampowered.com/app/2225090/Cascadence/">Acquire <span><img id="ic-caret" src = "static/imgs/caret.svg" /></span></a>
                     </div>
                 </div>
             </section>
