--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <meta name="theme-color" content="#ffffff">
     </head>
 
-    <body>
+    <body
         <main id="cont">
             <section>
                 <div>
@@ -39,7 +39,7 @@
                         <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
                     </div>
                     <div id="dl-btn-cont">
-                        <a id="dl-btn" href="https://store.steampowered.com/app/2225090/Cascadence/">Acquire <span><img id="ic-caret" src = "static/imgs/caret.svg" /></span></a>
+                        <a id="dl-btn" href="https://downloads.cascadence.net/CascadenceSetup.exe">Try Free<span><img id="ic-caret" src="static/imgs/download-solid.svg" /></span></a>
                     </div>
                 </div>
             </section>
