steam store link

--- a/index.html
+++ b/index.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Cascadence</title>
-        <meta name="description"
-            content="Cascadence - Survive and ultimately escape a foreign world using your creativity to assemble defenses with physics-based building.">
-        <meta name="keywords" content="game">
-        <meta property="og:image" content="https://cascadencegame.com/static/imgs/WebsiteOGImg.jpg">
-        <meta property="og:title" content="Cascadence" />
-        <meta property="og:site_name" content="Cascadence" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-        <meta property="og:url" content="https://cascadencegame.com/" />
-        <meta property="og:description"
-            content="Cascadence - Survive and ultimately escape a foreign world using your creativity to assemble defenses with physics-based building." />
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="static/stylesheet.css?v=5"" type=" text/css">
-        <script src="static/script.js"></script>
-        <link rel="apple-touch-icon" sizes="180x180" href="static/imgs/icons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="static/imgs/icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="static/imgs/icons/favicon-16x16.png">
-        <link rel="icon" href="/favicon.ico?v=3" />
-        <link rel="manifest" href="static/site.webmanifest">
-        <meta name="theme-color" content="#ffffff">
-    </head>
 
-    <body
-        <main id="cont">
-            <section>
-                <div>
-                    <video poster="static/imgs/VideoPoster.jpg" preload="auto" loop muted id="vid-bg">
-                        <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4" type="video/mp4">
-                    </video>
+<head>
+    <meta charset="UTF-8">
+    <title>Cascadence</title>
+    <meta name="description"
+        content="Cascadence - Survive and ultimately escape a foreign world using your creativity to assemble defenses with physics-based building.">
+    <meta name="keywords" content="game">
+    <meta property="og:image" content="https://cascadencegame.com/static/imgs/WebsiteOGImg.jpg">
+    <meta property="og:title" content="Cascadence" />
+    <meta property="og:site_name" content="Cascadence" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta property="og:url" content="https://cascadencegame.com/" />
+    <meta property="og:description"
+        content="Cascadence - Survive and ultimately escape a foreign world using your creativity to assemble defenses with physics-based building." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/imgs/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/imgs/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/imgs/icons/favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico?v=3" />
+    <link rel="manifest" href="static/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
+    <script src="static/script.js?v=6"></script>
+    <link rel="stylesheet" href="static/stylesheet.css?v=6"" type=" text/css">
+</head>
+
+<body <main id="cont">
+    <section>
+        <div id="intro-sec-cont">
+            <div>
+                <video poster="static/imgs/VideoPoster.jpg" preload="auto" loop muted id="vid-bg">
+                    <source src="https://github.com/user78543/Cascadence/raw/main/static/CascadenceTrailerWebsite.mp4"
+                        type="video/mp4">
+                </video>
+            </div>
+            <div id="vid-overlay">
+                <div id="logo-cont">
+                    <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
                 </div>
-                <div id="vid-overlay">
-                    <div id="logo-cont">
-                        <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
-                    </div>
-                    <div id="dl-btn-cont">
-                        <a id="dl-btn" href="https://downloads.cascadence.net/CascadenceSetup.exe">Try Free<span><img id="ic-caret" src="static/imgs/download-solid.svg" /></span></a>
-                    </div>
+                <div id="dl-btn-cont">
+                    <a id="dl-btn" href="https://downloads.cascadence.net/CascadenceSetup.exe">Try Free<span><img
+                                id="ic-caret" src="static/imgs/download-solid.svg" /></span></a>
                 </div>
-            </section>
+            </div>
+        </div>
+
+    </section>
+    <section>
+        <div id="steam-link-cont">
+            <div id="steam-link-btn-cont">
+                <a id="steam-link-btn" target="_blank" href="https://store.steampowered.com/app/2225090/Cascadence/">Available on Steam
+                <span><img id="steam-link-icon" src="static/imgs/icons/SteamLogoWhite.png" /></span></a>
+            </div>
+        </div>
+    </section>
 
 
-            <footer>
-                <div class="f-cont copyright">Cascadence Copyright © 2025. All rights reservered.
-                </div>
-                <div class="slogo-cont">
-                    <div class="slogo"><a target="_blank" href="https://www.youtube.com/@proxacor"><img class="slogo-img" src = "static/imgs/icons/YoutubeLogo.png"/></a></div>
-                    <div class="slogo"><a target="_blank" href="https://www.twitch.tv/proxacor"><img class="slogo-img" src = "static/imgs/icons/TwitchLogo.png"/></a></div>
-                    <div class="slogo"><a target="_blank" href="https://store.steampowered.com/app/2225090/Cascadence/"><img class="slogo-img" src = "static/imgs/icons/SteamLogo.png"/></a></div>
-                </div>
-            </footer>
-        </main>
-    </body>
+    <footer>
+        <div class="f-cont copyright">Cascadence Copyright © 2025. All rights reservered.
+        </div>
+        <div class="slogo-cont">
+            <div class="slogo"><a target="_blank" href="https://www.youtube.com/@proxacor"><img class="slogo-img"
+                        src="static/imgs/icons/YoutubeLogo.png" /></a></div>
+            <div class="slogo"><a target="_blank" href="https://www.twitch.tv/proxacor"><img class="slogo-img"
+                        src="static/imgs/icons/TwitchLogo.png" /></a></div>
+            <div class="slogo"><a target="_blank" href="https://store.steampowered.com/app/2225090/Cascadence/"><img
+                        class="slogo-img" src="static/imgs/icons/SteamLogo.png" /></a></div>
+        </div>
+    </footer>
+    </main>
+</body>
 
 </html>
