Updated demo link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img id="logo" src="static/imgs/logo_w_effects.png" alt="logo">
                 </div>
                 <div id="dl-btn-cont">
-                    <a id="dl-btn" href="https://downloads.cascadence.net/CascadenceSetup.exe">Try Free<span><img
+                    <a id="dl-btn" href="https://store.steampowered.com/app/3314570/Cascadence_Demo/?beta=0">Try Free<span><img
                                 id="ic-caret" src="static/imgs/download-solid.svg" /></span></a>
                 </div>
             </div>
