--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div id="dl-btn-cont">
                     <a id="dl-btn" href="https://store.steampowered.com/app/3314570/Cascadence_Demo/?beta=0">Try Free<span><img
-                                id="ic-caret" src="static/imgs/download-solid.svg" /></span></a>
+                                id="ic-caret" src="static/imgs/caret.svg" /></span></a>
                 </div>
             </div>
         </div>
